# codewars

./: .gitignore  Cargo.toml  README.md
src/: categorize_new_member.rs  descending_order.rs  lib.rs  main.rs
src/train/: algebraic_list.rs  assembler_interpreter_part_two.rs  cafeteria.rs  categorize_new_member.rs  consecutive_strings.rs  descending_order.rs  duplicate_encoder.rs  esolang_interpreters_1.rs  exes_and_ohs.rs  fixme_replace_all_dots.rs  highest_scoring_word.rs  human_readable_duration_format.rs  l1_bartender_drinks.rs  macro_add_numbers.rs  mod.rs  playing_with_digits.rs  rectangle_into_squares.rs  regex_validate_pin_code.rs  rot13.rs  simple_substitution_cipher_helper.rs  sum_of_odd_numbers.rs  the_if_function.rs  the_observed_pin.rs  which_are_in.rs
