[package]
name = "codewars"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.8"                   # Web framework that focuses on ergonomics and modularity
itertools = "0.10.3"
tokio = { version = "1.12.0", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
