[package]
name = "codewars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
bit-set = "0.5.2"
chrono = "0.4.19"
either = "1.7.0"
fancy-regex = "0.10.0"
futures = "0.3.21"
im = "15.1.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
num = { version = "0.4.0", features = ["rand"] }
once_cell = "1.13.0"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
text_io = "0.1.10"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
float_eq = "1.0.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
